Assignments/Assignment3/Slurm/slurm-3805.out
Error -11: clBuildProgram
1 Platforms found
1 Devices found
Max workgroup size is 1024
<kernel>:9:28: error: use of undeclared identifier 'size'
                if (i+1 != size){ 
                           ^
<kernel>:21:28: error: use of undeclared identifier 'size'
                if (i+1 != size){ 
                           ^


real	0m2.194s
user	0m0.021s
sys	0m0.754s
